<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UkrPostTracker</string>
    <string name="action_settings">Settings</string>
    <string name="track_code_info">Track Code Info</string>
    <string name="track">Track</string>
    <string name="my_codes">My Codes</string>
    <string name="wrongTrackCode">Wrong Track Code</string>
    <string name="barcode">Barcode:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="status_code">Status Code:</string>
    <string name="lastOffice">Post Office:</string>
    <string name="lastIndex">Index:</string>
    <string name="noDataReceived">No data received! Check internet connection.</string>
    <string name="title_activity_my_track_codes">MyTrackCodes</string>
    <string name="title_activity_track_code_info">TrackCodeInfo</string>
    <string name="retrack">Retrack</string>
    <string name="savecode">Save code</string>
    <string name="track_code">Track Code</string><string name="author">Schotkin Aleksandr</string>
    <string name="code_saved">Code successfully saved!</string>
    <string name="code_save_failed">Can\'t save code or it already in database.</string>
    <string name="lastcheck">Last check:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_date">Wrong date!</string>
    <string name="wrong_day">Wrong days number!</string>
    <string name="edit">Edit</string>
    <string name="send_date">Send date:</string>
    <string name="max_delivery_days">Max delivery days:</string>
    <string name="item_description">Description:</string>
    <string name="code">Code:</string>
    <string name="click_for_detail">Click for detail</string>
    <string name="change_in_code">Change in code</string>

</resources>
